--- a/siam-ch.ipynb
+++ b/siam-ch.ipynb
@@ -40,10 +40,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3265976-21b5-4af9-99e0-b02ef8d5dd80",
+   "metadata": {},
+   "source": [
+    "# Boat stability physics\n",
+    "\n",
+    "A boat is not guaranteed to rotate back to its upright position. For a boat to be upright-stable, the centers of buoyancy (COB) and mass (COM) must move in such a way as to create a restoring torque. The following boat hull design acheives a restoring torque at small angles.\n",
+    "\n",
+    "![Stable boat](../images/hull-schematic-stable.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bbadd87-f881-4442-b37d-9b54bd52f5c5",
+   "metadata": {},
+   "source": [
+    "The following boat hull design\n",
+    "\n",
+    "![Unstable boat](../images/hull-schematic-unstable.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "superior-object",
    "metadata": {},
    "source": [
-    "# Computational Model\n"
+    "# Computational Approach\n",
+    "\n",
+    "Rather than use mathematical analysis to derive an exact\n"
    ]
   },
   {
@@ -61,7 +85,7 @@
    "id": "irish-communication",
    "metadata": {},
    "source": [
-    "## Computational approach\n"
+    "## Computational solver\n"
    ]
   },
   {
@@ -649,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
