write parameterization, math formulation

--- a/siam-ch.ipynb
+++ b/siam-ch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "applied-commons",
+   "id": "fatal-pierce",
    "metadata": {},
    "source": [
     "# Overview\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "changed-irrigation",
+   "id": "premier-survivor",
    "metadata": {},
    "source": [
     "## Package loading\n"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "vital-sucking",
+   "id": "welcome-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,57 +40,155 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3265976-21b5-4af9-99e0-b02ef8d5dd80",
+   "id": "international-monthly",
    "metadata": {},
    "source": [
     "# Boat stability physics\n",
     "\n",
-    "A boat is not guaranteed to rotate back to its upright position. For a boat to be upright-stable, the centers of buoyancy (COB) and mass (COM) must move in such a way as to create a restoring torque. The following boat hull design acheives a restoring torque at small angles.\n",
+    "A boat is not guaranteed to rotate back to its upright position. For a boat to be upright-stable, the centers of buoyancy (COB) and mass (COM) must move in such a way as to create a restoring torque. \n",
     "\n",
+    "The following boat hull design acheives a restoring torque at small angles. This is an upright-stable design."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "american-impossible",
+   "metadata": {},
+   "source": [
     "![Stable boat](../images/hull-schematic-stable.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3bbadd87-f881-4442-b37d-9b54bd52f5c5",
+   "id": "global-transformation",
    "metadata": {},
    "source": [
-    "The following boat hull design\n",
-    "\n",
+    "The following boat hull design experiences an anti-restoring torque at small angles. This is an upright-unstable design."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "convertible-aaron",
+   "metadata": {},
+   "source": [
     "![Unstable boat](../images/hull-schematic-unstable.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "superior-object",
+   "id": "printable-digest",
    "metadata": {},
    "source": [
-    "# Computational Approach\n",
-    "\n",
-    "Rather than use mathematical analysis to derive an exact\n"
+    "Our goal in this work is to understand how the design of the boat hull (cross-section) affects upright stability. Naval engineers use the concept of *statical stability* to study this problem."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "velvet-hormone",
+   "id": "brilliant-signature",
+   "metadata": {},
+   "source": [
+    "## Statical stability\n",
+    "\n",
+    "Statical stability is defined under certain artificial---but useful---assumptions:\n",
+    "\n",
+    "- The boat has zero velocity; it has no momentum that can capsize the vessel.\n",
+    "- The boat is at an *equilibrium heave*; this means it is at a depth where the magnitude of the buoyant force exactly equals the vessel's weight.\n",
+    "- The moment is measured at a range of *roll angles*. The boat is assumed to start from zero velocity and equilibrium heave at each of these angles.\n",
+    "\n",
+    "The moment computed according to this approach is then the initial torque experienced in a dynamic setting. The following image depicts a statical stability curve for a single boat design. Note that counter-clockwise rotation corresponds to the $+\\theta$ direction, following standard mathematics notation.\n",
+    "\n",
+    "![Statical stability moment curve](../images/moment-curve.png)\n",
+    "\n",
+    "A boat design's upright stability can be determined from this moment curve $M(\\theta)$. For upright stability, there must be a restoring torque at small angles $\\theta \\to 0^{\\circ}$. For $\\theta > 0^{\\circ}$, the moment must be negative to oppose the direction of rotation. For a continuous moment curve, this corresponds to a negative slope of the moment curve at $\\theta = 0^{\\circ}$. Thus, we can use $\\left.\\frac{dM}{d\\theta}\\right|_{\\theta=0^{\\circ}}$ as an indicator of stability.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "synthetic-optimum",
+   "metadata": {},
+   "source": [
+    "# Computational Model\n",
+    "\n",
+    "Rather than use mathematical analysis to derive an exact expression for $M(\\theta)$, we will use a computational approach to approximate a solution. This will allow us to study a wider variety of boat geometries than we could analyze via pencil and paper alone. This approach will require us to both build a computational model, and use a computational approach to analyze that model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "suitable-external",
    "metadata": {},
    "source": [
     "## Shape parameterization\n",
     "\n",
-    "![](images/hull-schematic-upright.png)\n"
+    "We parameterize a family of boat hull designs using a simple expression. The following expression defines the lower bound of the boat hull\n",
+    "\n",
+    "$$f_{\\text{bot.}}(x) = H | \\frac{2x}{W} |^n,$$\n",
+    "\n",
+    "where $H$ is the height of the boat, $W$ is its (full) width, and $n$ defines the sharpness of its lower corner. The hull is then defined by the region in the $x,y$ plane bounded between\n",
+    "\n",
+    "$$f_{\\text{bot.}}(x) \\leq y \\leq H,$$\n",
+    "\n",
+    "for all $-W/2 \\leq x \\leq +W/2$. The following image depicts an example boat hull with $H=2, W=3, n=1$."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "irish-communication",
+   "id": "desirable-plate",
    "metadata": {},
    "source": [
-    "## Computational solver\n"
+    "![](images/hull-schematic-upright.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-tooth",
+   "id": "graphic-filling",
+   "metadata": {},
+   "source": [
+    "The COB is fully determined by the boat geometry $H,W,n$, its orientation $\\theta$, and heave (which defines the location of the waterline across the boat). However, two more quantities are necessary to solve for the moment curve $M(\\theta)$. \n",
+    "\n",
+    "The mass of the boat $m_{\\text{boat}}$ must be known in order to enforce the conditions of statical stability. We express the mass of the boat as the *displacement ratio* $d = m_{\\text{boat}} / (V_{\\text{disp. max}} \\times \\rho_{\\text{water}})$, where $V_{\\text{disp. max}}$ is the *maximum* volume of water the boat can displace (e.g., when fully submerged), and $\\rho_{\\text{water}}$ is the mass density of water.\n",
+    "\n",
+    "The center of mass (COM) of the boat is not necessarily at its centroid, as real boats are designed with heavy weights to lower their COM. We will express this design freedom by defining the COM location to be $y_{COM} = f_{COM} H$, with $f_{COM}$ controlling the COM location as a fraction of the overall boat height.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "unsigned-multiple",
+   "metadata": {},
+   "source": [
+    "## Mathematical formulation\n",
+    "\n",
+    "Vessel displacement\n",
+    "\n",
+    "$$V_{\\text{disp.}}(y_w) = \\int_{x=-W/2}^{+W/2} \\int_{f_{\\text{bot.}}(x)}^{y_w} dx dy,$$\n",
+    "\n",
+    "based on waterline location $y_w$. Equilibrium heave: solve for $y_w^*$ such that $V_{\\text{disp.}}(y_w^*) = d V_{\\text{disp. max}}$. Can be found via rootfinding\n",
+    "\n",
+    "Moment curve\n",
+    "\n",
+    "$$M(\\theta) = (m_{\\text{boat}} g) (x_{COB} - x_{COM}),$$\n",
+    "\n",
+    "Where $g$ is the acceleration due to gravity and $m_{\\text{boat}}$ can be determined from the displacement ratio $d$.\n",
+    "\n",
+    "Center locations\n",
+    "\n",
+    "$$x_{COB} = \\int_{x=-W/2}^{+W/2} \\int_{f_{\\text{bot.}}(x)}^{y_w} x dx dy.$$\n",
+    "\n",
+    "$$x_{COM} = \\int_{x=-W/2}^{+W/2} \\int_{f_{\\text{bot.}}(x)}^{H} x dx dy.$$\n",
+    "\n",
+    "The integrals above can be approximated using a discrete approximation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "terminal-christianity",
+   "metadata": {},
+   "source": [
+    "## Discrete integral approximation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "handled-accommodation",
    "metadata": {},
    "source": [
     "## Implement the model\n"
@@ -99,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "occupational-bloom",
+   "id": "controlling-advertising",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historic-parish",
+   "id": "impressed-gothic",
    "metadata": {},
    "source": [
     "# Computational Analysis\n"
@@ -170,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "settled-exhibit",
+   "id": "chief-minnesota",
    "metadata": {},
    "source": [
     "## Load the archival data\n"
@@ -179,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "extreme-center",
+   "id": "binary-library",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indian-final",
+   "id": "preliminary-denver",
    "metadata": {},
    "source": [
     "## Input/Output Correlations\n"
@@ -489,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "formed-artist",
+   "id": "laughing-compatibility",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "downtown-malpractice",
+   "id": "polished-moore",
    "metadata": {},
    "source": [
     "## Parameter sweeps\n"
@@ -541,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "processed-danish",
+   "id": "extra-posting",
    "metadata": {},
    "source": [
     "### Describe the input space\n"
@@ -550,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prospective-northeast",
+   "id": "hollow-snake",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-instrumentation",
+   "id": "hawaiian-store",
    "metadata": {},
    "source": [
     "### Generate sweep analysis\n"
@@ -600,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "realistic-vanilla",
+   "id": "thick-cycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "powered-accused",
+   "id": "dying-rabbit",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
